<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.fatoumeh.visitsierraleone.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textAlignment="center"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:paddingBottom="20dp"
            android:text="@string/biz_name"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textStyle="italic"
            android:fontFamily="monospace"
            android:textColor="@color/blackFont"
            android:paddingBottom="20dp"
            android:text="@string/biz_header" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/salone"
            android:adjustViewBounds="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/phone"
            android:maxHeight="60dp"
            android:maxWidth="60dp"
            android:adjustViewBounds="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:fontFamily="monospace"
            android:textSize="16sp"
            android:autoLink="phone"
            android:text="@string/phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/email"
            android:maxHeight="60dp"
            android:maxWidth="60dp"
            android:adjustViewBounds="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:fontFamily="monospace"
            android:textSize="16sp"
            android:autoLink="email"
            android:text="@string/email" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/facebook"
            android:maxHeight="60dp"
            android:maxWidth="60dp"
            android:adjustViewBounds="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:fontFamily="monospace"
            android:textColor="@color/blackFont"
            android:textSize="16sp"
            android:autoLink="web"
            android:text="@string/facebook" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/location"
            android:maxHeight="60dp"
            android:maxWidth="60dp"
            android:adjustViewBounds="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:fontFamily="monospace"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:text="@string/address" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textStyle="italic"
        android:fontFamily="monospace"
        android:textColor="@color/blackFont"
        android:paddingTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/biz_footer" />

</LinearLayout>
